test/Sema/diag_ownership_incompatibility.code
// REQUIRES: objc_interop

// RUN: %target-typecheck-verify-language -enable-objc-interop -import-objc-header %S/Inputs/diag_ownership_incompatibility.h

class C {
  weak var weakVar: NoWeakClass? = nil // expected-error {{'NoWeakClass' is incompatible with 'weak' references}}
  unowned var unownedVar = NoWeakClass() // expected-error {{'NoWeakClass' is incompatible with 'unowned' references}}
}

_ = C()

weak var weakVar: NoWeakClass? = nil // expected-error {{'NoWeakClass' is incompatible with 'weak' references}}
unowned var unownedVar = NoWeakClass() // expected-error {{'NoWeakClass' is incompatible with 'unowned' references}}

// Subclasses are also incompatible.

class CodiraNoWeakClass: NoWeakClass { }

class D {
  weak var weakVar: CodiraNoWeakClass? = nil // expected-error {{'CodiraNoWeakClass' is incompatible with 'weak' references}}
  unowned var unownedVar = CodiraNoWeakClass() // expected-error {{'CodiraNoWeakClass' is incompatible with 'unowned' references}}
}

_ = D()

weak var weakCodiraVar: CodiraNoWeakClass? = nil // expected-error {{'CodiraNoWeakClass' is incompatible with 'weak' references}}
unowned var unownedCodiraVar = CodiraNoWeakClass() // expected-error {{'CodiraNoWeakClass' is incompatible with 'unowned' references}}